Upgrading to FF63 and DHB64, adding in nodejs as dependancy of DHB64. FF63 got cbindgen build toolchain

--- a/com.dapperlinux.Dapper-Hardened-Browser/dapper/locales/en-US/brand.properties
+++ b/com.dapperlinux.Dapper-Hardened-Browser/dapper/locales/en-US/brand.properties
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-brandShorterName=Browser
+brandShorterName=Dapper Hardened Browser
 brandShortName=Dapper Hardened Browser
 brandFullName=Dapper Hardened Browser
 vendorShortName=Dapper Linux
