--- a/com.dapperlinux.Dapper-Hardened-Browser/dapper/locales/en-US/brand.dtd
+++ b/com.dapperlinux.Dapper-Hardened-Browser/dapper/locales/en-US/brand.dtd
@@ -2,7 +2,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. -->
 
-<!ENTITY  brandShorterName      "Browser">
+<!ENTITY  brandShorterName      "Dapper Hardened Browser">
 <!ENTITY  brandShortName        "Dapper Hardened Browser">
 <!ENTITY  brandFullName         "Dapper Hardened Browser">
 <!ENTITY  vendorShortName       "Dapper Linux">
